--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>doggies</title>
+    <title>Doggies</title>
   </head>
   <body>
     <div id="root"></div>
